# awareness-platform

./: .env.example  .git-credentials  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ANALYTICS_DASHBOARD_IMPLEMENTATION.md  CI_CD_STRICT_IMPLEMENTATION_SUMMARY.md  CI_CD_SUMMARY.md  CLAUDE.md  CREDENTIALS.md  CRITICAL_ISSUES_FIXED.md  CRITICAL_ISSUES_REPORT.md  CURRENT_STATUS.md  DEEP_RESEARCH_ANALYSIS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_UPDATE_SUMMARY.md  EMERGENCY_PRODUCTION_FIX.sh  EXECUTE_PRODUCTION_FIX.sh  EXECUTE_PRODUCTION_FIX_SAFE.sh  FINAL_CI_CD_STATUS.md  FINAL_SWARM_REPORT.md  GITHUB_ACTIONS_FIX_STATUS.md  GITHUB_ACTIONS_READY.md  GITHUB_ACTIONS_STATUS.md  GITHUB_ISSUES_RESOLUTION_REPORT.md  GITHUB_SECRETS_SETUP.md  GITHUB_SETUP_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INFRASTRUCTURE_AUDIT_REPORT.md  ISSUE_RESOLUTION_REPORT.md  ISSUE_RESOLUTION_SUMMARY.md  LANDING_PAGE_IMPLEMENTATION.md  MONITORING_IMPLEMENTATION.md  Makefile  PAYMENT_SYSTEM_IMPLEMENTATION.md  PRODUCTION_FIX_README.md  (+41 more)
backend/: .dockerignore  .env.example  .env.minimal  .env.test  .gitignore  .markdownlint.json  API_ENDPOINTS.md  API_VERSIONING_STRATEGY.md  BACKEND_RECONSTRUCTION_SUMMARY.md  BACKEND_STRUCTURE.md  CONTRIBUTORS.md  DATABASE_MIGRATIONS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  ENUM_FIX_GUIDE.md  IMPORT_FIXES_SUMMARY.md  LOGIN_ANALYSIS_REPORT.md  LOGIN_FIX_REPORT.md  Makefile  PERFORMANCE_OPTIMIZATION.md  PYTEST_FIX_DOCUMENTATION.md  README.md  SECURITY_AUDIT.md  SOURCE_OF_TRUTH.md  TESTING_GUIDE.md  TEST_REPORT.md  TROUBLESHOOTING.md  create-env.sh  database-spec.md  (+34 more)
(+797 files in other folders)
